--- a/src/data/grammar/mtg-pros.yaml
+++ b/src/data/grammar/mtg-pros.yaml
@@ -77,27 +77,79 @@
       "Johnnies",
       "Spikes",
       "Melvins",
-      "Vorthoses"  
+      "Vorthoses"
   ],
   "team": [
-      "#teamSite# #teamDescriptor#"
+      "[teamSuffix:#teamDescriptor#]#teamPrefix# #teamSuffix#"
   ],
-  "teamSite": [
-      "ChannelFireball",
-      "StarCityGames",
-      "MTGMintCard",
-      "Ultra PRO",
-      "Phoenix",
-      "Puzzle Quest",
-      "Pojo Dot Com"
+  "teamPrefix": [
+    "#realTeam#",
+    "[teamSuffix:#normalTeamDescriptor#]#jokeTeam#",
+    "#otherTeamPrefix#"
   ],
   "teamDescriptor": [
-      "Gold",
-      "Platinum",
-      "Foundation",
-      "#basicColors.capitalize#",
-      "#direction.capitalizeAll#",
-      "#massNoun.capitalizeAll#",
-      "#creatureTypes.capitalize#"
+    "#normalTeamDescriptor#",
+    "#unusualTeamDescriptor#"
+  ],
+
+  "normalTeamDescriptor": [
+    "Gold",
+    "Platinum",
+    "Foundation",
+    "Unlimited",
+    "#basicColors.capitalize#",
+    "#direction.capitalizeAll#",
+  ],
+
+  "unusualTeamDescriptor": [
+    "#massNoun.capitalizeAll#",
+    "#creatureTypes.capitalize#",
+    "#keyword#",
+    "#jokeTeamDescriptor#"
+  ],
+
+  "realTeam": [
+    "ChannelFireball",
+    "StarCityGames",
+    "MTGMintCard",
+    "Ultra PRO",
+    "Phoenix",
+    "Puzzle Quest",
+    "Pojo Dot Com"
+  ],
+  "jokeTeam":  [
+    "#creatureTypes.capitalize#",
+    "#cardAlone.alphaOnly.capitalizeAll#",
+    "#website#",
+    "MTG#adj.alphaOnly.capitalizeAll#Card",
+  ],
+  "website": [
+    "Pojo Dot [_tld:Org,Net,Gov]#_tld#",
+    "[_domain:#creatureTypes#,#itemNoun#]#_domain.capitalizeAll# Dot Com"
+  ],
+  "otherTeamPrefix": [
+    "#cardCategory.capitalizeAll#",
+    "#adj.capitalizeAll#",
+    "#adj.capitalizeAll# [teamSuffix:#characterClass.capitalize.s#]",
+    "#adj.capitalizeAll# [teamSuffix:#bodypart.capitalize#]",
+    "#direction.capitalizeAll# Coast [teamSuffix:Legends,Warriors,#characterClass.capitalizeAll.s#]",
+    "#basicColors.capitalize# #placeNoun.capitalizeAll# [teamSuffix:Legends,Warriors,#characterClass.capitalizeAll.s#]"
+  ],
+  "jokeTeamDescriptor": [
+    "All-Stars",
+    "Autocomplete",
+    "Babylegs",
+    "Benchwarmers",
+    "Carpetbaggers",
+    "Cobra Style",
+    "Goofball",
+    "Low Ball",
+    "Minesweeper",
+    "Mob",
+    "Phone It In",
+    "Trivial Pursuit",
+    "Tryhard",
+    "Wienerdog",
+    "Whirlybird"
   ]
 }
