more vocab; more headline options

--- a/src/data/grammar/adj.yaml
+++ b/src/data/grammar/adj.yaml
@@ -14,6 +14,7 @@
         "sticky", "stinking", "sullen", "sultry", "superb", "surly","sweaty", "swollen", "tacky", "teeny-tiny", "tenacious",
         "tepid", "terrifying", "timeless", "tiny", "two-faced", "unconventional", "unorthodox", "unstable", "vainglorious", "creamy",
         "volumetric", "well-dressed", "wonderful", "world-weary", "worthless", "iron", "arcane", "foul", "handsome", "lovely",
-        "graceful", "clumsy", "pleasant", "unpleasant", "elegant", "devoted", "faithful", "fickle", "persnickety", "academic"
+        "graceful", "clumsy", "pleasant", "unpleasant", "elegant", "devoted", "faithful", "fickle", "persnickety", "academic",
+        "nasty", "repulsive", "creepy", "obnoxious", "petulant", "delicious", "loathsome", "jaunty", "irresponsible", "wasteful"
     ]
 }
