--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "submodules/tracery"]
 	path = submodules/tracery
-	url = git@github.com:GoodGamery/tracery.git
+	url = https://github.com/GoodGamery/mtgnewsbot.git
