--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "submodules/tracery"]
 	path = submodules/tracery
-	url = https://github.com/GoodGamery/mtgnewsbot.git
+  url = https://github.com/GoodGamery/mtgnewsbot.git
+  branch = promisify
