--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "submodules/tracery"]
 	path = submodules/tracery
   url = https://github.com/GoodGamery/mtgnewsbot.git
-  branch = promisify
+  branch = master
