saving work; small fixes and vocab adds

--- a/src/data/grammar/creature-types.yaml
+++ b/src/data/grammar/creature-types.yaml
@@ -129,7 +129,7 @@
       "turtle",
       "unicorn",
       "vampire",
-      "veldalken",
+      "vedalken",
       "wall",
       "warrior",
       "weird",
