--- a/src/data/grammar/mtg-card-of-the-day.yaml
+++ b/src/data/grammar/mtg-card-of-the-day.yaml
@@ -173,7 +173,7 @@ marginalThingToDo:
   - gain protection from a single color
   - band two creatures together
   - combine two cards together in one sleeve
-  - rotate cards through space and time to reveal their secret third side
+  - rotate cards through space and time to reveal their secret third sides
   - conditionally gain one life
   - swap the order of layers 3 and 5
   - draw one card, then put it back
