populate card dimensions; more cotd headlines; cord italic text and link styling

--- a/src/data/grammar/mtg-cards.yaml
+++ b/src/data/grammar/mtg-cards.yaml
@@ -347,10 +347,12 @@
       "Sorrow's Path",
       "Squire",
       "Stangg",
+      "Straw Soldiers",
       "Stream of Life",
       "Suntail Hawk",
       "Unbender Tine",
       "Tahngarth's Glare",
+      "Wielding the Green Dragon",
       "Wood Elemental"
   ],
   "realObscureCard": [
