--- a/src/data/grammar/mtg-card-of-the-day.yaml
+++ b/src/data/grammar/mtg-card-of-the-day.yaml
@@ -2,31 +2,31 @@
 cotdImage:
   - "[_cardname:#realCard#][_cotdDescription:#cotdDescription#][_cotdImgUrl:https#colon#//goodgamery.com/api/mtg/image?card=#_cardname#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
   - "[#cotdCreatureTypeSearch#][_cotdDescription:#cotdCreatureTypeDescription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
-  - "[_cardType:aura,equipment][#_cardType.cardSearchByType#][_cardname:#_cardName1#][_cotdDescription:#cotdAuraOrEquipmentDescription#][_cotdImgUrl:#_cardImgUrl1#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
+  - "[_cardType:aura,equipment][#_cardType.cardSearchByType#][_cardname:#_cardName1#][_cardset:#_cardSet1#][_cotdDescription:#cotdAuraOrEquipmentDescription#][_cotdImgUrl:#_cardImgUrl1#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
   - "[#searchableCardCategory#][#cotdCardCategorySearch#][_cotdDescription:#cotdTextDescription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
 
-cotdCardTypeSearch: "[_cardType:#cardTypes#][#_cardType.cardSearchByType#][_cardname:#_cardName1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#]"
-cotdCreatureTypeSearch: "[_creatureType:#creatureTypes#][#_creatureType.cardSearchByType#][_cardname:#_cardName1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#]"
-cotdCardCategorySearch: "[_cardText:#_cardCategorySearchTerm#][#_cardText.cardSearchByText#][_cardname:#_cardName1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#]"
+cotdCardTypeSearch: "[_cardType:#cardTypes#][#_cardType.cardSearchByType#][_cardname:#_cardName1#][_cardset:#_cardSet1#][_cardtype:#_cardSomeTypeOrSubtype1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#][_cardDesc:#_cardType#][_cardDescCategory:#_cardDesc.s#]"
+cotdCreatureTypeSearch: "[_creatureType:#creatureTypes#][#_creatureType.cardSearchByType#][_cardname:#_cardName1#][_cardset:#_cardSet1#][_cardtype:#_cardSomeTypeOrSubtype1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#][_cardDesc:#_creatureType#][_cardDescCategory:#_cardDesc.s#]"
+cotdCardCategorySearch: "[_cardText:#_cardCategorySearchTerm#][#_cardText.cardSearchByText#][_cardname:#_cardName1#][_cardset:#_cardSet1#][_cardtype:#_cardSomeTypeOrSubtype1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#][_cardDesc:#_cardCategory#][_cardDescCategory:#_cardCategoryClass#]"
 
 cotdParameterizedCardSearch:
-  - "[#cotdCardTypeSearch#][_cardDesc:#_cardType#]"
-  - "[#cotdCreatureTypeSearch#][_cardDesc:#_creatureType#]"
-  - "[#cotdCardCategorySearch#][_cardDesc:#_cardCategory#]"
+  - "#cotdCardTypeSearch#"
+  - "#cotdCreatureTypeSearch#"
+  - "#cotdCardCategorySearch#"
 
 searchableCardCategory:
-  - "[_cardCategory:removal spell][_toughness:1,2,3,4,5,X][_cardCategorySearchTerm:\"destroy target creature\",\"exile target creature\",\"enchanted creature can't attack\",\"fights target\",\"damage to target creature\",\"sacrifices a creature\",\"/-#_toughness# until\",\"enchanted creature doesn't\"]"
-  - "[_cardCategory:land destruction spell][_cardCategorySearchTerm:\"destroy target land\",\"sacrifices a land\"]"
-  - "[_cardCategory:pump spell][_cardCategorySearchTerm:\"target creature gets +\",\"creatures you control get +\"]"
-  - "[_cardCategory:combat trick][_cardCategorySearchTerm:\"target creature gets +\",\"target creature gains\"]"
-  - "[_cardCategory:discard spell][_cardCategorySearchTerm:\"discards a card\",\"discards that card\"]"
-  - "[_cardCategory:counterspell][_cardCategorySearchTerm:\"counter target\"]"
-  - "[_cardCategory:direct damage spell,burn spell][_cardCategorySearchTerm:\"damage to target\"]"
-  - "[_cardCategory:ramp spell][_cardCategorySearchTerm:\"land card and put that card onto\",\"put them onto\",\"land card and put it onto\",\"forest card and put it onto\",\"forest card and put that card onto\"]"
-  - "[_cardCategory:lifegain spell][_amount:1,2,3,4,5,6,7,8,10,20,X][_cardCategorySearchTerm:\"gain life\",\"gain #_amount# life\"]"
-  - "[_cardCategory:cantrip][_cardCategorySearchTerm:\"draw a card.\"]"
-  - "[_cardCategory:slowtrip][_cardCategorySearchTerm:\"draw a card at the beginning\"]"
-  - "[_cardCategory:bounce spell][_targetCardType:creature,permanent,nonland permanent][_cardCategorySearchTerm:\"return target #_targetCardType# to\"]"
+  - "[_cardCategory:removal spell][_cardCategoryClass:removal][_toughness:1,2,3,4,5,X][_cardCategorySearchTerm:\"destroy target creature\",\"exile target creature\",\"enchanted creature can't attack\",\"fights target\",\"damage to target creature\",\"sacrifices a creature\",\"/-#_toughness# until\",\"enchanted creature doesn't\"]"
+  - "[_cardCategory:land destruction spell][_cardCategoryClass:land destruction][_cardCategorySearchTerm:\"destroy target land\",\"sacrifices a land\"]"
+  - "[_cardCategory:pump spell][_cardCategoryClass:pump spells][_cardCategorySearchTerm:\"target creature gets +\",\"creatures you control get +\"]"
+  - "[_cardCategory:combat trick][_cardCategoryClass:combat tricks][_cardCategorySearchTerm:\"target creature gets +\",\"target creature gains\"]"
+  - "[_cardCategory:discard spell][_cardCategoryClass:discard][_cardCategorySearchTerm:\"discards a card\",\"discards that card\"]"
+  - "[_cardCategory:counterspell][_cardCategoryClass:countermagic][_cardCategorySearchTerm:\"counter target\"]"
+  - "[_cardCategory:direct damage spell,burn spell][_cardCategoryClass:burn][_cardCategorySearchTerm:\"damage to target\"]"
+  - "[_cardCategory:ramp spell][_cardCategoryClass:ramp][_cardCategorySearchTerm:\"land card and put that card onto\",\"put them onto\",\"land card and put it onto\",\"forest card and put it onto\",\"forest card and put that card onto\"]"
+  - "[_cardCategory:lifegain spell][_cardCategoryClass:lifegain][_amount:1,2,3,4,5,6,7,8,10,20,X][_cardCategorySearchTerm:\"gain life\",\"gain #_amount# life\"]"
+  - "[_cardCategory:cantrip][_cardCategoryClass:cantrips][_cardCategorySearchTerm:\"draw a card.\"]"
+  - "[_cardCategory:slowtrip][_cardCategoryClass:slowtrips][_cardCategorySearchTerm:\"draw a card at the beginning\"]"
+  - "[_cardCategory:bounce spell][_cardCategoryClass:bounce][_targetCardType:creature,permanent,nonland permanent][_cardCategorySearchTerm:\"return target #_targetCardType# to\"]"
 
 #This requires _cardname to be set already
 cotdImageHtml: "{htmlImg htmlImgString=`#_cotdHtml#` screenWidth=`1000` screenHeight=`500`}"
@@ -38,26 +38,29 @@ cotdTitle:
 
 cotdDescription:
   - "This blast from the [_time:future,past,future,past,present,distant future,distant past]#_time# is back, and it's still the only way for a player to #marginalThingToDo#! Although with #keyword# coming back, we can't promise that any keyword is really off the menu moving forward."
-  - "When your opponent plays #kindaGood.a# spell, your first #cardWhichDrawsCards# is probably to try to cause them to have #cardWhichCountersSpells.a#."
+  - "When your opponent plays #kindaGood.a# spell, your first [_cardlinkName:#cardWhichDrawsCards#]#_cotdHtmlCardLink# is probably to try to cause them to have a [_cardlinkName:#cardWhichCountersSpells#]#_cotdHtmlCardLink#."
   - "This card seems [_kindaGood:#kindaGood#]#_kindaGood#...until you realize that #surprisingResult#. Then it [_result:becomes #reallyGood#,seems really #_kindaGood#]#_result#."
-  - "Every player aspires to have as many #_cardname.s# as they have #colors# #deckArchOrCategory# decks."
-  - "#multicolor# #deckLimitedArchetype.capitalize# may be the favored deck for this color combo, but that doesn't mean #multicolor# #keyword# isn't always happy to have another tool in its [_toolbox:back pocket,arsenal,toolbox,kit,playbook]#_toolbox#!"
+  - "Every player aspires to have as many [_cardlinkName:#_cardname.s#]#_cotdHtmlCardLink# as they have #colors# #deckArchOrCategory# decks."
+  - "#multicolor# #deckLimitedArchetype.capitalize# may be the favored deck for this card, but that doesn't mean #multicolor# #keyword# isn't always happy to have another tool in its [_toolbox:back pocket,arsenal,toolbox,kit,playbook]#_toolbox#!"
 
 cotdTextDescription:
-  - "It's no surprise that #_cardcolor.capitalize#'s [_superlative:#cardSuperlative#,second-#cardSuperlative#]#_superlative# #_cardCategory# finds its way into almost every [_decktype:#format#,#deckArchOrCategory#]#_decktype# deck that can host it. Plus it [_verbs:offers,enables,makes possible]#_verbs# some of the most #interestingPlay# the game has ever seen."
-  - "[#cotdParameterizedCardSearch#]This versatile #_cardDesc# has already shown itself as an all-star of the new metagame. Check out the Pro Tour this weekend to see if the #deckArchOrCategory# dominance continues!"
-
+  - "It's no surprise that #_cardcolor.capitalize#'s [_superlative:#cardSuperlative#,second-#cardSuperlative#]#_superlative# #_cardCategory# finds its way into almost every [_decktype:#format#,#deckArchOrCategory#]#_decktype# deck that can support it. Plus it [_verbs:offers,enables,makes possible]#_verbs# some of the most #interestingPlay# the game has ever seen."
+  - "[#cotdParameterizedCardSearch#]This versatile #_cardDesc# has already shown itself as an all-star of the new #format# metagame. Check out the Pro Tour this weekend to see if the #deckArchOrCategory# dominance continues!"
+  - "If you think this #cardQuality# #_cardDesc# only fits into [_deckType:#_cardColor1#,#deckLimitedArchetype#,#deck#]#_deckType# decks, you may need to reconsider your #format# strategies."
+  - "[#cotdCardCategorySearch#]One of the best [_kindOfCard:#_cardRarity1#,#_cardType1#,#_cardDesc#]#_kindOfCard.lowercase.s# in [_italicText:#_cardSet1#]#_italicize# Limited right here. Turns out  [_cardlinkName:#cardAlone#]#_cotdHtmlCardLink# is still one of #_cardColor1#'s #cardSuperlative# [_otherKindOfCard:#cardCategory#,#_cardDesc#]#_otherKindOfCard.s#."
+  - "[#cotdCardCategorySearch#]#_cardColorClass1.capitalize#, #cardQuality# #_cardDescCategory# will always be [_position:an unavoidable part of,a necessary evil in,at a premium in,a commodity in,#kindaGood# in]#_position# #popularFormat#, [_authority:Development,Mark Rosewater,Hasbro,the Future-Future League][_rigid:extremely rigid,militant,inconsistent,incomprehensible,ludicrous,unreasonably firm][_qualifier:unfortunately,like it or not,thanks to #_authority#'s #_rigid# stance on #_cardDescCategory#,regardless of the cost,thanks to the New World Order,because of reasons,because of the Reserved List,and always has been]#_qualifier#. Though sticking it on [_cardlinkName:#cardAlone#][_surface:#_cardtype.lowercase.a#,#cardCategory.lowercase.a#,#_cotdHtmlCardLink.a# variant]#_surface# [_result:certainly helps,certainly helps,doesn't help,really changes things,makes no sense,makes a certain kind of sense,certainly might make you resonsider it,is a clumsy approach to fixing this, is a feeble way to remedy this]#_result#."
 cotdAuraOrEquipmentDescription:
-  - "Long ago, [_adj:inventive,resourceful,desparate,clever,crafty,beleagured]#_adj.a# #creatureTypes# decided to stick some #massNoun.hyphenate#-infused [_equipmentPart:#bodypart# armor,blades,spikes,bracers,pauldrons,gauntlets,rivets,ribbons,pinstripes,toothpicks,pipe cleaners,pom poms,rhinestones]#_equipmentPart# onto what appears to be a [_surface:#itemNoun#,pair of #itemNoun.s#]#_surface#. Today, almost every #characterClass# [_worn:has donned,has worn,wields,sports]#_worn# [_theArmor:one of these,a pair]#_theArmor# to #creatureActionVerb# as they [_verb:dash,rumble,rush,roll]#_verb# into battle."
+  - "Long ago, [_adj:inventive,resourceful,desparate,clever,crafty,beleagured]#_adj.a# #creatureTypes# decided to [_adhere:stick,slap,affix]#_adhere# some #massNoun.hyphenate#-infused [_equipmentPart:#bodypart# armor,blades,spikes,bracers,pauldrons,gauntlets,rivets,ribbons,pinstripes,toothpicks,pipe cleaners,pom poms,rhinestones]#_equipmentPart# onto what appears to be [_surface:#itemNoun#,pair of #itemNoun.s#]#_surface.a#. Today, almost every #characterClass# [_worn:has donned,has worn,wields,sports]#_worn# [_theArmor:one of these,a pair]#_theArmor# to #creatureActionVerb# as they [_verb:dash,rumble,rush,roll,charge,barrel,plow]#_verb# [_intoBattle:into battle,into the fray,into combat,into the red zone,through the breach,into the kill zone,into the night,#sweepSpellMove#]#_intoBattle#."
 
 cotdCreatureTypeDescription:
  - "Only on #plane# would people see this #adjImpressive# #_creatureType# and nickname it [_nickname:The #adj.capitalizeAll.hyphenate# #characterClass.capitalizeAll#,#planeswalkerFirstName#'s #characterClass.capitalizeAll#]“#_nickname#”."
- - "Now that we know that this #_creatureType# is the [_source:creator,progenitor,source]#_source# of all #_creatureType#kind across the multiverse (even #tribalCreature#), does that mean that every #_creatureType# is a [_minionTitle:Scion of the #_cardname#,Spawn of #_cardname#,Minion of #_cardname#, #_cardname.hyphenate#'s Faithful]#_minionTitle#?"
+ - "Now that we know that this #_creatureType# is the [_source:creator,progenitor,source]#_source# of all #_creatureType#kind across the multiverse (even [_cardlinkName:#tribalCreature#]#_cotdHtmlCardLink#), does that mean that every #_creatureType# is a [_minionTitle:Scion of the #_cardname#,Spawn of #_cardname#,Minion of #_cardname#, #_cardname.hyphenate#'s Faithful][_cardlinkName:#_minionTitle#]#_cotdHtmlCardLink#?"
  - "#_creatureType.capitalize.s# may not ascend to #characterClass.hyphenate#hood very often, but when they do, the results tend to be[_adv:, really, pretty, extremely, surprisingly, quite, truly] #adj#."
- - "If you're looking for an impressive bomb in #teaserCardSet# limited, look no further than this #adj# #_creatureType#."
+ - "If you're looking for #interestingPlayAdj.a# bomb in [_italicText:#teaserCardSet#]#_italicize# Limited, look no further than this #adj# #_creatureType#."
  - "Things took a dark turn [_where:at the #storyLocation# #placeNoun.capitalize#,in #minorStoryLocation#,in #nonPlaneLocation#]#_where# after this #_creatureType# learned they had run out of [_item:#itemNoun.s#,#massNoun#]#_item#."
- - "#_creatureType.capitalize# tribal, meet #format#. We've wanted to introduce you two for a while, and we thought [_adj:loving,friendly,abundant,populated,inhabited][_where:the #_creatureType#-#_adj# plane of #plane#,#teaserCardSet#]#_where# would be the perfect place for you to meet."
- - "If you're looking to beef up #character#'s tribal support next [_date:business day,weekend,week,month,week,month,year,year,decade,century]#_date#, make sure to look at the #_creatureType.capitalizeAll# tribal pushes [_futureSet:#teaserCardSet#,#novelCardSetName#][_madeOrAreMaking:we made back in #cardSet# and #cardSet#,we're making in #_futureSet.capitalizeAll#]#_madeOrAreMaking#."
+ - "#_creatureType.capitalize# tribal, meet #format#. We've wanted to introduce you two for a while, and we thought [_adj:loving,friendly,abundant,populated,inhabited][_italicText:#teaserCardSet#][_teaserSet:#_italicize#][_where:the #_creatureType#-#_adj# plane of #plane#,#_teaserSet#]#_where# would be the perfect place for you to meet."
+ - "If you're looking to beef up #character#'s tribal support next [_date:business day,weekend,week,month,week,month,year,year,decade,century]#_date#, make sure to look at the #_creatureType.capitalizeAll# tribal pushes [_italicText:#cardSet#][_pastSet1:#_italicize#][_italicText:#_cardset#][_pastSet2:#_italicize#][_futureSet:#teaserCardSet#,#novelCardSetName#][_italicText:#_futureSet.capitalizeAll#][_futureSetText:we're making in #_italicize#][_madeOrAreMaking:we made back in #_pastSet1# and #_pastSet2#,#_futureSetText#]#_madeOrAreMaking#."
+ - "Finally, after months of staring at [_cardlinkName:#cardAlone#]#_cotdHtmlCardLink#, we finally know what gift awaits the [_adj:chosen,devoted,devout,faithful,pious,righteous,worthy,#adj#]#_adj# [_beings:inhabitants,denizens,disciples]#_beings# of #plane#: eternal servitude to the #_creatureType.capitalizeAll.hyphenate#-#characterClass.capitalizeAll.hyphenate# [_cardlinkName:#_cardname#]#_cotdHtmlCardLink#!"
 
 cardSuperlative:
 - most versatile
@@ -83,6 +86,43 @@ cardSuperlative:
 - narrowest
 - best
 - worst
+
+sweepSpellMove:
+  - across the Araba
+  - down Sokenzan
+  - into Takenuma
+  - through Reito
+  - through the Blind Eternities
+
+cardQuality:
+- verstatile
+- flexible
+- overpowered
+- underpowered
+- undercosted
+- broken
+- playable
+- unplayable
+- draftable
+- "#format.hyphenate#-playable"
+- balanced
+- conditional
+- unconditional
+- unrestricted
+- underwhelming
+- well-designed
+- poorly-designed
+- forgettable
+- terrible
+- spicy
+- mildly interesting
+- confusing
+- unimpressive
+- unreasonable
+- ridiculous
+- whimsical
+- interesting
+- unconvetional
 
 interestingPlayAdj:
   - hilarious
@@ -180,7 +220,7 @@ marginalThingToDo:
   - "reveal the [_where:top,bottom,first,last,middle]#_where# card #cardLocation#"
   - "continue [_acting:drawing cards,gaining life,playing lands,talking,shuffling,blocking,searching your library]#_acting# after losing the game"
   - reduce the casting cost of red enchantments by 1 generic mana
-  - delay combo kills by precisely #count# turns
+  - "delay combo kills by precisely #count# turns"
   - "destroy #cardCategory.s# in #colors#"
   - peek at the top card of your library
 
@@ -191,7 +231,7 @@ surprisingResult:
   - "it can let you take up to #count# extra turns"
   - "you get to return it to your hand"
   - "you can combo it with #cardAlone#."
-  - "it's going to be #rarity.a# in #teaserCardSet.capitalizeAll#"
+  - "it's going to be #rarity.a# in [_italicText:#teaserCardSet.capitalizeAll#]#_italicize#"
 
 cardWhichDrawsCards:
   - Impulse
@@ -229,6 +269,10 @@ cardWhichCountersSpells:
   - Complicate
   - Confound
   - Convolute
+
+_cotdHtmlCardLink: "<a name=\".\" class=\"card-link\">#_cardlinkName#</a>"
+_italicize: "<span class=\"italicized\">#_italicText#</span>"
+
 
 _cotdHtml: |
   <head>
@@ -314,6 +358,14 @@ _cotdHtml: |
         text-align: left;
         font-weight: 400;
         line-height: 1.3em;
+      }
+      a.card-link {
+        color: rgb(200,145,25);
+        font-weight: 700;
+        text-decoration: underline;
+      }
+      span.italicized {
+        font-style: italic;
       }
     </style>
   </head>
