Added subdirectory support, reorganized grammar files

--- a/src/data/grammar/mtg-game-steps.yaml
+++ b/src/data/grammar/mtg-game-steps.yaml
@@ -1,10 +1,8 @@
-  {
-  	"gameStep": [
-  	"Untap Step",
-    "Upkeep",
-    "Draw Step",
-    "first Main Phase",
-    "second Main Phase",
-    "Cleanup Step"
-  ]
-}
+---
+gameStep:
+  - "Untap Step"
+  - "Upkeep"
+  - "Draw Step"
+  - "first Main Phase"
+  - "second Main Phase"
+  - "Cleanup Step"
